# electionguard-rust

./: .gitattributes  .gitignore  .markdownlint.json  BUILDING.md  README.md  SUPPORT.md  TODO.txt  rustfmt.toml
doc/: index.md
doc/apps/: electionguard.md
doc/code_organization/: code_organization.md
doc/implementation_guide/: implementation_guide.md
doc/implementation_guide/implementation_guide/: for_election_systems_vendors.md  for_verifier_app_authors.md
doc/specs/: ElectionGuard_2.0_Serialization_Specification.md  ElectionGuard_2.1.0_Serialization_Specification.md  serialization.md
doc/specs/ElectionGuard_2.0_jsonschema/: election_manifest.json  election_parameters.json  hashes.json  hashes_ext.json  voter_selections.json
doc/specs/ElectionGuard_2.1.0_jsonschema/: ballot.json  guardian_public_key.json  guardian_secret_key.json  joint_election_public_key.json
example_artifacts/SECRET_for_guardian_1/: guardian_1.SECRET_key.json
example_artifacts/SECRET_for_guardian_2/: guardian_2.SECRET_key.json
example_artifacts/SECRET_for_guardian_3/: guardian_3.SECRET_key.json
example_artifacts/SECRET_for_guardian_4/: guardian_4.SECRET_key.json
example_artifacts/SECRET_for_guardian_5/: guardian_5.SECRET_key.json
example_artifacts/public/: election_manifest.json  election_parameters.json  guardian_1.public_key.json  guardian_2.public_key.json  guardian_3.public_key.json  guardian_4.public_key.json  guardian_5.public_key.json  hashes.json  hashes_ext.json  joint_election_public_key.json  pre_voting_data.json
src/: Cargo.toml
src/demo-eg/: Cargo.toml
src/demo-eg/src/: actor_cell_ext.rs  key_ceremony.rs  main.rs  router.rs
src/eg/: Cargo.toml
src/eg-resourceproducer-filesystem/: Cargo.toml
src/eg-resourceproducer-filesystem/src/: lib.rs
src/eg/src/: algebra.rs  algebra_utils.rs  ballot.rs  ballot_encrypting_tool.rs  ballot_list.rs  ballot_recording_tool.rs  ballot_scaled.rs  ballot_style.rs  ballot_test_tally.rs  ballot_test_verify.rs  chaining_mode.rs  ciphertext.rs  commitment.rs  confirmation_code.rs  contest.rs  contest_data_fields.rs  contest_data_fields_ciphertexts.rs  contest_data_fields_plaintexts.rs  contest_data_fields_tallies.rs  contest_encrypted.rs  contest_hash.rs  contest_option.rs  contest_option_fields.rs  contest_selection.rs  device.rs  discrete_log.rs  edo_template.rs  eg.rs  eg_config.rs  egds_version.rs  el_gamal.rs  election_manifest.rs  election_parameters.rs  election_record.rs  election_tallies.rs  errors.rs  example_election_manifest.rs  example_election_parameters.rs  example_pre_voting_data.rs  extended_base_hash.rs  (+66 more)
src/electionguard/: Cargo.toml
src/electionguard/src/: artifacts_dir.rs  clargs.rs  common_utils.rs  guardian.rs  main.rs  manifest.rs  pre_encrypted_ballots.rs  subcommand_helper.rs  verify_standard_parameters.rs  write_manifest.rs
src/electionguard/src/subcommands/: create_ballot_from_voter_selections.rs  generate_ballot.rs  generate_guardian_key.rs  generate_guardian_shares.rs  generate_key.rs  generate_random_voter_selections.rs  guardian_key_generate.rs  guardian_secret_key_generate.rs  guardian_secret_key_write_public_key.rs  mod.rs  none.rs  preencrypted_ballot_generate.rs  preencrypted_ballot_record.rs  preencrypted_ballots.rs  verify_ballot.rs  verify_guardian_proof.rs  verify_guardian_shares.rs  verify_standard_parameters.rs  voter_write_confirmation_code.rs  voter_write_random_selections.rs  write_hashes.rs  write_hashes_ext.rs  write_joint_election_public_key.rs  write_manifest.rs  write_parameters.rs  write_pre_voting_data.rs  write_random_seed.rs
src/formulator/: Cargo.toml
src/formulator/src/: error.rs  lib.rs
src/formulator/src/imp/: domain.rs  hasher.rs  mod.rs  problem.rs  rule.rs  solution.rs  sym.rs  sym_set.rs
src/formulator/src/imp/snapshots/: formulator__imp__domain__t__t0-2.snap  formulator__imp__domain__t__t0-3.snap  formulator__imp__domain__t__t0-4.snap  formulator__imp__domain__t__t0.snap  formulator__imp__domain__t__t1-2.snap  formulator__imp__domain__t__t1.snap  formulator__imp__hasher__t__t0-2.snap  formulator__imp__hasher__t__t0.snap
src/formulator/src/snapshots/: formulator__t__t0-2.snap  formulator__t__t0-3.snap  formulator__t__t0.snap
src/preencrypted/: Cargo.toml
src/preencrypted/src/: ballot.rs  ballot_encrypting_tool.rs  ballot_list.rs  ballot_recording_tool.rs  confirmation_code.rs  contest.rs  contest_hash.rs  contest_selection.rs  lib.rs  nonce.rs
src/test-data-generation/: Cargo.toml
src/test-data-generation/src/: lib.rs
src/test-data-generation/src/test_data_generation/: council.rs  hash_lcg.rs  mod.rs  persona.rs
src/test-electionguard/: Cargo.toml
src/test-electionguard/src/: clargs.rs  do_test.rs  main.rs
src/util/: Cargo.toml
src/util/src/: abbreviation.rs  algebra.rs  algebra_utils.rs  array_ascii.rs  base16.rs  biguint_serde.rs  bitwise.rs  const_minmax.rs  csprng.rs  csrng.rs  file.rs  hex_dump.rs  index.rs  integer_util.rs  lib.rs  logging.rs  osrng.rs  prime.rs  serde.rs  text.rs  uint31.rs  uint53.rs  vec1.rs  z_mul_prime.rs
src/verifier/: Cargo.toml
src/verifier/src/: lib.rs  verifier.rs
