[workspace]
resolver = "2"

members = [
  "demo-eg",
  "eg",
  "eg-resourceproducer-filesystem",
  #"formulator",
  "test-electionguard",
  "electionguard",
  # "preencrypted",
  "util",
  "test-electionguard",
]

[workspace.dependencies]

#--- Defined in this workspace
eg = { path = "./eg" }
eg-resourceproducer-filesystem = { path = "./eg-resourceproducer-filesystem" }
# electionguard = { path = "./electionguard" }
# preencrypted = { path = "./preencrypted" }
util = { path = "./util" }

#--- From crates.io

allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"] }
anyhow = "1.0.97"
arbitrary = { version = "1.4.1", features = ["derive"] }
derive_arbitrary  = "1.4.1"
#bimap = "0.6.3"
bitflags = { version = "2.9.0", features = ["std"] }
#bumpalo = { version = "3.17.0", default-features = false, features = ["allocator-api2", "boxed", "collections"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
cfg-if = "1.0.0"
downcast-rs = "2.0.1"
derive_more = { version = "2.0.1", default-features = false }
either = { version = "1.15.0", features = ["serde"] }
equivalent  = "1.0.2"
faster-hex = { version = "0.10.0" }
hashbrown = { version = "0.15.2", default-features = false, features = [
    "allocator-api2",
    "equivalent",
    "inline-more",
    #"rayon",
    "raw-entry",
    "serde"
] }
hex-literal = { version = "1.0.0", default-features = false, features = [] }
indexmap = { version = "2.7.1", default-features = false, features = [] }
indoc = "2.0.5"
inventory = "0.3.20"
itertools = "0.14.0"
lazy_static = "1.4"
maybe-owned = "0.3.4"
num-bigint = { version = "0.4.6", features = ["serde"] }
num-integer = "0.1.46"
num-traits = { version = "0.2.19", features = ["libm"] }
nutype = { version = "0.6.1", default-features = false, features = ["new_unchecked", "serde", "std"] }

#generic-array = { version = "1.2.0", default-features = false, features = ["const-default", "faster-hex", "serde", "typenum", "zeroize"] }
#typenum = { version = "1.18.0", default-features = false, features = [] }

# pathfinding = "4.13.1"  # defines no features
# num-traits = "0.2.19"              # pathfinding
# indexmap = "2.5.0"                 # pathfinding
# rustc-hash = "2.0.0"               # pathfinding
# integer-sqrt = "0.1.5"             # pathfinding
# deprecate-until = "0.1.1"          # pathfinding

# proptest = { version = "1.6.0", features = [] }
# proptest-arbitrary-interop = "0.1.0"

smallbitvec = "2.6.0"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive", "std"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"

tempfile = { version = "3.17.1", default-features = false, features = [] }

#--- Futures

futures-lite = { version = "2.6.0", features = [
    # Feature "default" gets dragged in by async-executor and lots of stuff
    "futures-io", # Needed for simple timers
] }

# futures-core <- futures-lite
futures-core = { version = "0.3.31", default-features = false }

# futures-io <- futures-lite
futures-io = { version = "0.3.31", default-features = false }

# pin-project-lite <- futures-lite
pin-project-lite = "0.2.16"

async-global-executor = { version = "3.1.0", default-features = false, features = [
    "async-io",
    # "tokio",
] }

# Needed for simple timers
#  async-io/default <- async-global-executor/async-io
async-io = "2.4.0"

async-process = { version = "2.3.0", default-features = false, features = [] }

#async-fs = { version = "2.1.2", default-features = false }

# async-lock default feature from async-process
async-lock = "3.4.0"

async-trait = { version = "0.1.87", default-features = false, features = [] }

#--- Rand

getrandom = { version = "0.3.1", default-features = false }
rand = { version = "0.9.0", default-features = false, features = [
    "alloc",
] }
rand_core = { version = "0.9.3", default-features = false, features = ["std"] }
rand_distr  = { version = "0.5.1", default-features = false, features = ["std_math"] } # https://github.com/rust-random/rand_distr/blob/master/Cargo.toml
rand_xorshift = { version = "0.4.0", default-features = false }
rustc-stable-hash = "0.1.1"
# zerocopy = "0.8.21"  # from rand 0.9
# zerocopy-derive = "0.8.21"  # from zerocopy 0.8.20

#--- Serde

erased-serde = { version = "0.4.6" }
serde = { version = "1.0.218", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.139", features = ["preserve_order", "std"] }
serde_with = { version = "3.12.0", default-features = false, features = ["macros"] }

#--- Tracing

tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
# tracing: "pin-project-lite 0.2.15"
# tracing: "tracing-core 0.1.33"
# tracing-core: "once_cell 1.20.2"

tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "smallvec", "std"] }
# tracing-subscriber: "tracing-core 0.1.33"
# tracing-subscriber "fmt": "sharded-slab 0.1.7"
# tracing-subscriber "fmt": "thread_local 1.1.8"
# tracing-subscriber "smallvec": "smallvec 1.13.2"

#valuable = { version = "0.1.0", features = ["derive", "std"] }
# tracing-core "valuable": "valuable" version = "0.1.0"

# tracing-subscriber "parking_lot": "parking_lot 0.12.3"
# tracing-subscriber "parking_lot": "parking_lot_core 0.9.10"
# tracing-subscriber "parking_lot": "smallvec 1.13.2"
# tracing-subscriber "parking_lot": "redox_syscall 0.5.7"
# tracing-subscriber "parking_lot": "scopeguard 1.2.0"
# tracing-subscriber "parking_lot": "lock_api 0.4.12"

#with default features: newly dragged in by tracing and/or -subscriber "tracing-attributes 0.1.28"
#with default features: newly dragged in by tracing and/or -subscriber "tracing-log 0.2.0"
#with default features: newly dragged in by tracing and/or -subscriber "overload 0.1.1"
#with default features: newly dragged in by tracing and/or -subscriber "nu-ansi-term 0.46.0"
#with default features: newly dragged in by tracing and/or -subscriber "log 0.4.22"
#with default features: newly dragged in by tracing and/or -subscriber "winapi 0.3.9"
#with default features: newly dragged in by tracing and/or -subscriber "winapi-i686-pc-windows-gnu 0.4.0"
#with default features: newly dragged in by tracing and/or -subscriber "winapi-x86_64-pc-windows-gnu 0.4.0"

test-log = { version = "0.2.17", default-features = false, features = [
    #"color",
    "trace",
]}

#--- RustCrypto

# https://crates.io/crates/block-buffer/0.10.4
# https://github.com/RustCrypto/utils/blob/block-buffer-v0.10.4/block-buffer/Cargo.toml
block-buffer = { version = "0.10.4", default-features = false, features = [] }

# https://crates.io/crates/crypto-common/0.1.6
# https://github.com/RustCrypto/traits/blob/crypto-common-v0.1.6/crypto-common/Cargo.toml
# https://github.com/RustCrypto/traits/blob/25614e2d5a4ccbb0cfde23367a93c8bcdbfe421a/crypto-common/Cargo.toml
crypto-common = { version = "0.1.6", default-features = false, features = ["getrandom", "rand_core", "std"] }

# Next release 0.11 probably not before Rust 1.85 2024 edition Feb/March 2025 https://github.com/RustCrypto/traits/issues/1571
digest = { version = "0.10.7", default-features = false, features = [
    "block-buffer",
    # "const-oid",
    "core-api",
    "mac",
    # "oid",
    "rand_core",
    # "subtle",
    "std", "alloc",
    # "dev", "blobby",
    # depends on digest 0.11 "zeroize",
] }

# https://crates.io/crates/hmac/0.12.1
# https://github.com/RustCrypto/MACs/blob/hmac-v0.12.1/hmac/Cargo.toml
# https://github.com/RustCrypto/MACs/blob/46797e3b44973a30edb9d7f3a3ebb41810061d90/hmac/Cargo.toml
hmac = { version = "0.12.1", default-features = false, features = ["std", "reset"] }

# https://crates.io/crates/sha2/0.10.8
# https://github.com/RustCrypto/hashes/blob/sha2-v0.10.8/sha2/Cargo.toml
# https://github.com/RustCrypto/hashes/blob/c6decdf36f64e4c651edcf60e12527acfb9d9c9c/sha2/Cargo.toml
# Next release depends on digest 0.11 https://github.com/RustCrypto/hashes/issues/584
sha2 = { version = "0.10.8", default-features = false, features = [
    "compress",
    # "oid",
    "std",
    # depends on digest 0.11 "zeroize",
] }

# https://crates.io/crates/sha3/0.10.8
# https://github.com/RustCrypto/hashes/blob/sha3/v0.10.8/sha3/Cargo.toml
# https://github.com/RustCrypto/hashes/blob/62d84e1da613ab4f5a3259326e81ef25c6c012e1/sha3/Cargo.toml
# Next release depends on digest 0.11 https://github.com/RustCrypto/hashes/issues/584
sha3 = { version = "0.10.8", default-features = false, features = [
    "reset",
    "std",
    # depends on digest 0.11 "zeroize",
] }

# https://github.com/RustCrypto/utils/blob/zeroize-v1.8.1/zeroize/Cargo.toml
zeroize = { version = "1.8.1", default-features = false, features = [
    "derive", "zeroize_derive",
    "serde",
    "std", "alloc",
    "simd",
] }
