[workspace]
resolver = "2"

members = [
  "demo-eg",
  "eg",
  "eg-resourceproducer-filesystem",
  "test-electionguard",
  "electionguard",
  # "preencrypted",
  "util",
  "test-electionguard",
  "test-data-generation",
]

[workspace.dependencies]

#--- Defined in this workspace

eg = { path = "./eg", default-features = false }
eg-resourceproducer-filesystem = { path = "./eg-resourceproducer-filesystem", default-features = false }
# electionguard = { path = "./electionguard", default-features = false }
# preencrypted = { path = "./preencrypted", default-features = false }
test-data-generation = { path = "./test-data-generation", default-features = false }
util = { path = "./util", default-features = false }

#--- From crates.io

allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"] }
anyhow = "1.0.98"
arbitrary = { version = "1.4.1", features = ["derive"] }
derive_arbitrary  = "1.4.1"
base16ct = { version = "0.2.0", default-features = false, features = [] }
#bimap = "0.6.3"
bitflags = { version = "2.9.0", features = ["std"] }
#bumpalo = { version = "3.17.0", default-features = false, features = ["allocator-api2", "boxed", "collections"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
cfg-if = "1.0.0"
downcast-rs = "2.0.1"
derive_more = { version = "2.0.1", default-features = false }
either = { version = "1.15.0", features = ["serde"] }
equivalent  = "1.0.2"
faster-hex = { version = "0.10.0" }
fnv = { version = "1.0.7", default-features = false, features = ["std"] }
hashbrown = { version = "0.15.2", default-features = false, features = [
    "allocator-api2",
    "equivalent",
    "inline-more",
    #"rayon",
    "raw-entry",
    "serde"
] }
hex-literal = { version = "1.0.0", default-features = false, features = [] }
indoc = "2.0.5"
insta = { version = "1.43.1", features = ["json", "ron"] }
inventory = "0.3.20"
itertools = "0.14.0"
lazy_static = "1.4"
nutype = { version = "0.6.1", default-features = false, features = ["new_unchecked", "serde", "std"] }

# proptest = { version = "1.6.0", features = [] }
# proptest-arbitrary-interop = "0.1.0"

smallbitvec = "2.6.0"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive", "std"] }
strum_macros = "0.27.1"
textwrap = { version = "0.16.2", default-features = false, features = ["unicode-width"] }
thiserror = "2.0.12"

tempfile = { version = "3.17.1", default-features = false, features = [] }

#--- Futures

futures-lite = { version = "2.6.0", features = [
    # Feature "default" gets dragged in by async-executor and lots of stuff
    "futures-io", # Needed for simple timers
] }

# futures-core <- futures-lite
futures-core = { version = "0.3.31", default-features = false }

# futures-io <- futures-lite
futures-io = { version = "0.3.31", default-features = false }

# pin-project-lite <- futures-lite
pin-project-lite = "0.2.16"

async-executor = { version = "1.13.2", default-features = false, features = [] }

async-global-executor = { version = "3.1.0", default-features = false, features = [
    "async-io",
    # "tokio",
] }

# Needed for simple timers
#  async-io/default <- async-global-executor/async-io
async-io = "2.4.0"

async-process = { version = "2.3.0", default-features = false, features = [] }

async-fs = { version = "2.1.2", default-features = false }

# async-lock default feature from async-process
async-lock = "3.4.0"

async-trait = { version = "0.1.88", default-features = false, features = [] }

#--- Num-*, typenum, generic-array, hybrid-array

const-default = "1.0.0"
generic-array = { version = "1.2.0", default-features = false, features = [
    # "alloc",
    # "internals",
    "const-default",
    # "faster-hex",
    # "serde",
    # "typenum",
    # "zeroize",
] }

# https://github.com/RustCrypto/hybrid-array/releases/tag/v0.3.1
# https://github.com/RustCrypto/hybrid-array/tree/v0.3.1
# https://github.com/RustCrypto/hybrid-array/blob/v0.3.1/Cargo.toml
hybrid-array = { version = "0.3.1", default-features = false, features = [
    # "extra-sizes",
    # "bytemuck",
    # "serde",
    # "subtle",
    "zeroize",
] }

num-bigint = { version = "0.4.6", features = ["serde"] }
num-integer = "0.1.46"
num-traits = { version = "0.2.19", features = ["libm"] }

typenum = { version = "1.18.0", default-features = false, features = ["const-generics"] }

#--- Ractor

ractor = { version = "0.15", default-features = false, features = [
    "async-std",
    "async-trait",
    ] }

#--- Rand

getrandom = { version = "0.3.2", default-features = false }
rand = { version = "0.9.1", default-features = false, features = [
    "alloc",
] }
rand_core = { version = "0.9.3", default-features = false, features = ["std"] }
rand_distr  = { version = "0.5.1", default-features = false, features = ["std_math"] } # https://github.com/rust-random/rand_distr/blob/master/Cargo.toml
rand_xorshift = { version = "0.4.0", default-features = false }
rustc-stable-hash = "0.1.1"
# zerocopy = "0.8.21"  # from rand 0.9
# zerocopy-derive = "0.8.21"  # from zerocopy 0.8.20

#--- RustCrypto

# https://crates.io/crates/block-buffer/0.10.4
# https://github.com/RustCrypto/utils/blob/block-buffer-v0.10.4/block-buffer/Cargo.toml
block-buffer = { version = "0.10.4", default-features = false, features = [] }

# https://crates.io/crates/crypto-common/0.1.6
# https://github.com/RustCrypto/traits/blob/crypto-common-v0.1.6/crypto-common/Cargo.toml
# https://github.com/RustCrypto/traits/blob/25614e2d5a4ccbb0cfde23367a93c8bcdbfe421a/crypto-common/Cargo.toml
crypto-common = { version = "0.1.6", default-features = false, features = ["getrandom", "rand_core", "std"] }

# Next release 0.11 probably not before Rust 1.85 2024 edition Feb/March 2025 https://github.com/RustCrypto/traits/issues/1571
digest = { version = "0.10.7", default-features = false, features = [
    "block-buffer",
    # "const-oid",
    "core-api",
    "mac",
    # "oid",
    "rand_core",
    # "subtle",
    "std", "alloc",
    # "dev", "blobby",
    # depends on digest 0.11 "zeroize",
] }

# https://crates.io/crates/hmac/0.12.1
# https://github.com/RustCrypto/MACs/blob/hmac-v0.12.1/hmac/Cargo.toml
# https://github.com/RustCrypto/MACs/blob/46797e3b44973a30edb9d7f3a3ebb41810061d90/hmac/Cargo.toml
hmac = { version = "0.12.1", default-features = false, features = ["std", "reset"] }

# https://crates.io/crates/sha2/0.10.8
# https://github.com/RustCrypto/hashes/blob/sha2-v0.10.8/sha2/Cargo.toml
# https://github.com/RustCrypto/hashes/blob/c6decdf36f64e4c651edcf60e12527acfb9d9c9c/sha2/Cargo.toml
# Next release depends on digest 0.11 https://github.com/RustCrypto/hashes/issues/584
sha2 = { version = "0.10.8", default-features = false, features = [
    "compress",
    # "oid",
    "std",
    # depends on digest 0.11 "zeroize",
] }

# https://crates.io/crates/sha3/0.10.8
# https://github.com/RustCrypto/hashes/blob/sha3/v0.10.8/sha3/Cargo.toml
# https://github.com/RustCrypto/hashes/blob/62d84e1da613ab4f5a3259326e81ef25c6c012e1/sha3/Cargo.toml
# Next release depends on digest 0.11 https://github.com/RustCrypto/hashes/issues/584
sha3 = { version = "0.10.8", default-features = false, features = [
    "reset",
    "std",
    # depends on digest 0.11 "zeroize",
] }

# https://github.com/RustCrypto/utils/blob/zeroize-v1.8.1/zeroize/Cargo.toml
zeroize = { version = "1.8.1", default-features = false, features = [
    "derive", "zeroize_derive",
    "serde",
    "std", "alloc",
    "simd",
] }

#--- Serde

erased-serde = { version = "0.4.6" }
serde = { version = "1.0.219", features = ["derive", "rc", "std"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "std"] }
serde_tokenstream = "0.2.2"
serde_with = { version = "3.12.0", features = ["alloc", "macros"] } #default-features = false,

#--- Tracing

tracing = { version = "0.1.41", default-features = false, features = [
    "std",
    "attributes",
] }

tracing-futures = { version = "0.2.5", default-features = false, features = [
    "std",
    "std-future",
] }

tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "fmt",
    "smallvec",
    "std",
] }

# valuable = { version = "0.1.0", features = ["derive", "std"] }

test-log = { version = "0.2.17", default-features = false, features = [
    "color",
    "trace",
]}

#--- Unicode, ICU

unicode-ident = "1.0.18"
unicode-properties = { version = "0.1.3", default-features = false, features = ["general-category"] }
unicode-normalization = { version = "0.1.24", default-features = false, features = [] }

icu_collator = { version = "1.5.0", default-features = false, features = ["compiled_data"] }
icu_locid = { version = "1.5.0", default-features = false, features = [] }
