[package]
name = "demo-eg"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "eg-allow-unsafe-code",
    "eg-allow-insecure-deterministic-csprng",
    "eg-allow-test-data-generation",
    "eg-allow-toy-parameters",
]
eg-allow-unsafe-code           = ["eg/eg-allow-unsafe-code", "util/eg-allow-unsafe-code" ]
eg-allow-insecure-deterministic-csprng  = ["eg/eg-allow-insecure-deterministic-csprng", "util/eg-allow-insecure-deterministic-csprng" ]
eg-forbid-insecure-deterministic-csprng = ["eg/eg-forbid-insecure-deterministic-csprng", "util/eg-forbid-insecure-deterministic-csprng" ]
eg-allow-test-data-generation  = ["eg/eg-allow-test-data-generation", "util/eg-allow-test-data-generation" ]
eg-forbid-test-data-generation = ["eg/eg-forbid-test-data-generation", "util/eg-forbid-test-data-generation" ]
eg-allow-toy-parameters = ["eg/eg-allow-toy-parameters", "util/eg-allow-toy-parameters" ]
eg-forbid-toy-parameters = ["eg/eg-forbid-toy-parameters", "util/eg-forbid-toy-parameters" ]

[dependencies]

#--- Defined in this workspace
eg.workspace = true
util.workspace = true

#--- From crates.io
anyhow.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
# nutype.workspace = true
# rand.workspace = true
serde.workspace = true
# serde_json.workspace = true
# static_assertions.workspace = true

#--- Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
#valuable.workspace = true

#--- RustCrypto
# crypto-common.workspace = true
# digest.workspace = true
# hmac.workspace = true
# sha2.workspace = true
# sha3.workspace = true
# zeroize.workspace = true

