[package]
name = "eg-dataproducer-filesystem"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/microsoft/electionguard-rust"
license = "Apache-2.0 OR MIT"
publish = false

[features]

default = [
    "eg-forbid-unsafe-code",
]

eg-allow-unsafe-code                    = [ "eg/eg-allow-unsafe-code",  "util/eg-allow-unsafe-code" ]
eg-forbid-unsafe-code                   = [ "eg/eg-forbid-unsafe-code", "util/eg-forbid-unsafe-code" ]

[dependencies]

#--- Defined in this workspace

eg.workspace = true
util.workspace = true

#--- From crates.io

# anyhow.workspace = true
# cfg-if.workspace = true
# derive_more = { workspace = true, features = ["debug", "deref", "deref_mut", "display", "from", "into"] }
# downcast-rs.workspace = true
# either.workspace = true
inventory.workspace = true
# itertools.workspace = true
static_assertions.workspace = true
# strum.workspace = true
# strum_macros.workspace = true
# thiserror.workspace = true

#--- Futures

async-fs.workspace = true
async-global-executor.workspace = true
async-io.workspace = true
async-lock.workspace = true
# async-process = true
async-trait.workspace = true
#futures-core.workspace = true
futures-lite.workspace = true
futures-io.workspace = true
pin-project-lite.workspace = true
#trait-variant.workspace = true

#--- Serde

erased-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_tokenstream.workspace = true
serde_with.workspace = true

#--- Tracing

tracing.workspace = true
#valuable.workspace = true

[dev-dependencies] #=============================================================== dev-dependencies

insta = { version = "1.43.1", features = ["json", "ron"] }
test-log.workspace = true
