[package]
name = "eg"
version = "0.1.0"
edition = "2024"
publish = false

[features]

default = [
    "eg-forbid-unsafe-code",
    "eg-forbid-insecure-deterministic-csprng",
    "eg-forbid-test-data-generation",
    "eg-forbid-toy-parameters",
    "eg-forbid-nonstandard-egds-version",
]

eg-allow-unsafe-code                    = [ "util/eg-allow-unsafe-code" ]
eg-allow-insecure-deterministic-csprng  = [ "util/eg-allow-insecure-deterministic-csprng" ]
eg-allow-test-data-generation           = [ "util/eg-allow-test-data-generation" ]
eg-allow-toy-parameters                 = [ "util/eg-allow-toy-parameters" ]
eg-allow-nonstandard-egds-version       = [ "util/eg-allow-nonstandard-egds-version" ]

eg-forbid-unsafe-code                   = [ "util/eg-forbid-unsafe-code" ]
eg-forbid-insecure-deterministic-csprng = [ "util/eg-forbid-insecure-deterministic-csprng" ]
eg-forbid-test-data-generation          = [ "util/eg-forbid-test-data-generation" ]
eg-forbid-toy-parameters                = [ "util/eg-forbid-toy-parameters" ]
eg-forbid-nonstandard-egds-version      = [ "util/eg-forbid-nonstandard-egds-version" ]

[dependencies]

#--- Defined in this workspace

util.workspace = true

#--- From crates.io

anyhow.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
derive_more = { workspace = true, features = ["debug", "deref", "deref_mut", "display", "from", "into"] }
downcast-rs.workspace = true
either.workspace = true
hashbrown.workspace = true
hex-literal.workspace = true
inventory.workspace = true
itertools.workspace = true
lazy_static.workspace = true
num-bigint.workspace = true
#num-integer.workspace = true
num-traits.workspace = true
rand.workspace = true
static_assertions.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

#--- Futures

async-global-executor.workspace = true
async-lock.workspace = true
async-trait.workspace = true
futures-core.workspace = true
futures-lite.workspace = true
#trait-variant.workspace = true

#--- proc_macro2, quote, syn, unicode-ident

# proc-macro2.workspace = true
# quote.workspace = true
# syn.workspace = true
unicode-ident.workspace = true

#--- RustCrypto

# crypto-common.workspace = true
digest.workspace = true
hmac.workspace = true
sha2.workspace = true
# sha3.workspace = true
zeroize.workspace = true

#--- Serde

erased-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_tokenstream.workspace = true
serde_with.workspace = true

#--- Tracing

tracing.workspace = true
#valuable.workspace = true

[dev-dependencies]
derive_more = { workspace = true, features = ["add_assign"] }
insta = { version = "1.42.1", features = ["json", "ron"] }
test-log.workspace = true
